View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033569 | Community | OCCT:Data Exchange | public | 2024-01-11 19:50 | 2024-02-05 03:40 |
Reporter | robertlipman | Assigned To | vglukhik | ||
Priority | normal | Severity | crash | ||
Status | verified | Resolution | fixed | ||
Product Version | 7.7.3 | ||||
Summary | 0033569: Data Exchange, STEP - Crash when reading multi-body file | ||||
Description | This STEP AP242 file from PTC Creo will not open in CAD Assistant or the NIST STEP File Viewer which uses OCCT 7.7. I have seen this happen before with other Creo AP242 files. Specifically, the file contains what in Creo is known as a multi-body. The file correctly opens in other STEP viewers such as eDrawings and the Open STEP Viewer where you can make the model transparent and see the 'multi' bodies. There are no syntax errors that would prevent the file from opening. | ||||
Steps To Reproduce | Import the STEP file and see it crash. However, I could not attach the STEP file below in the form. There is a 2 MB limit and the file is 4 MB. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
@robertlipman hello, could you split file into 2\3 parts? Best regards, Dmitrii. |
|
I split the file into 3 sections. Creo-multibody-part1.stp (1,611,985 bytes) Creo-multibody-part2.stp (1,242,868 bytes) Creo-multibody-part3.stp (1,237,865 bytes) |
|
Branch CR33569 has been created by ichesnokova. SHA-1: 1b5eef4a229f33c2a8621daa7f6b052792270cec Detailed log of new commits: Author: ichesnok Date: Thu Jan 18 14:41:27 2024 +0000 0033569: Data Exchange, STEP - Crash when reading multi-body file Fixed |
|
Branch CR33569 has been updated forcibly by ichesnokova. SHA-1: 0fc5b4a2c26cbec51bb85df2cb425ca949925cd5 |
|
Dear dpasukhi, please review branch CR33569. Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR33569-master-ichesnok/view/COMPARE/ |
|
Dear ichesnokova, 1) Please use one placement style for opening curly braces 2) If you touched the variable's names please update them according to the Code Rules (HADSOR -> aHADSOR, etc.) 3) Please add tests. 4) Please explain the fix in the commit message Do not forget to rebase onto the current master after all the changes. |
|
Branch CR33569 has been updated forcibly by ichesnokova. SHA-1: d684eb0b9ada3a50cf21d05299130777dbaaed95 |
|
Dear ika, please review branch CR33569. Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR33569-master-ichesnok/view/COMPARE/ |
|
No more remarks. Dear bugmaster, please integrate OCCT CR33569 |
|
Combination - OCCT branch : IR-2024-02-02 master SHA - 80705eaf3181f779d6f59bbe0959e1acafb8fc94 d2ef868da4165400c82322bd7f11b652decce47a Products branch : IR-2024-02-02 SHA - 1138f036bbb2108d18e2649701fcfa8a430bf4e6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Ubuntu2004-64: OCCT Total CPU difference: 17746.459999999875 / 18049.510000000217 [-1.68%] Products Total CPU difference: 11492.199999999928 / 11720.99999999989 [-1.95%] Windows-64-VC142: OCCT Total CPU difference: 20148.875 / 21735.421875 [-7.30%] Products Total CPU difference: 12625.53125 / 13033.78125 [-3.13%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33569 has been deleted by vglukhik. SHA-1: d684eb0b9ada3a50cf21d05299130777dbaaed95 |
occt: master 80705eaf 2024-01-18 14:41:27 ichesnok Committer: vglukhik Details Diff |
0033569: Data Exchange, STEP - Crash when reading multi-body file Datum reading changed in ReadDatums() method: using DatumSystemAP242 (DatumSystem or DatumReference) array instead of DatumSystem array (DatumReference) |
Affected Issues 0033569 |
|
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx | Diff File | ||
add - tests/bugs/step/bug33569 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2024-01-11 19:50 | robertlipman | New Issue | |
2024-01-11 19:50 | robertlipman | Assigned To | => ika |
2024-01-12 16:57 | dpasukhi | Note Added: 0114900 | |
2024-01-12 16:58 | dpasukhi | Note Edited: 0114900 | |
2024-01-15 21:39 | robertlipman | Note Added: 0114911 | |
2024-01-15 21:39 | robertlipman | File Added: Creo-multibody-part1.stp | |
2024-01-15 21:39 | robertlipman | File Added: Creo-multibody-part2.stp | |
2024-01-15 21:39 | robertlipman | File Added: Creo-multibody-part3.stp | |
2024-01-18 14:41 | dpasukhi | Summary | CAD Assistant cannot read STEP file => Data Exchange, STEP - Crash when reading multi-body file |
2024-01-18 14:41 | dpasukhi | Assigned To | ika => ichesnokova |
2024-01-18 14:41 | dpasukhi | Status | new => assigned |
2024-01-18 17:42 | git | Note Added: 0114929 | |
2024-01-19 12:31 | git | Note Added: 0114932 | |
2024-01-19 15:13 |
|
Assigned To | ichesnokova => dpasukhi |
2024-01-19 15:13 |
|
Status | assigned => resolved |
2024-01-19 15:13 |
|
Note Added: 0114933 | |
2024-01-25 18:30 | dpasukhi | Assigned To | dpasukhi => ika |
2024-01-26 16:44 | ika | Assigned To | ika => ichesnokova |
2024-01-26 16:44 | ika | Status | resolved => assigned |
2024-01-26 16:44 | ika | Note Added: 0114987 | |
2024-01-30 20:11 | git | Note Added: 0115014 | |
2024-02-01 18:02 |
|
Assigned To | ichesnokova => ika |
2024-02-01 18:02 |
|
Status | assigned => resolved |
2024-02-01 18:02 |
|
Note Added: 0115024 | |
2024-02-02 14:38 | ika | Assigned To | ika => bugmaster |
2024-02-02 14:38 | ika | Status | resolved => reviewed |
2024-02-02 14:38 | ika | Note Added: 0115027 | |
2024-02-05 03:10 | vglukhik | Note Added: 0115036 | |
2024-02-05 03:14 | vglukhik | Changeset attached | => occt master 80705eaf |
2024-02-05 03:14 | vglukhik | Assigned To | bugmaster => vglukhik |
2024-02-05 03:14 | vglukhik | Status | reviewed => verified |
2024-02-05 03:14 | vglukhik | Resolution | open => fixed |
2024-02-05 03:40 | git | Note Added: 0115040 |