0033569: Data Exchange, STEP - Crash when reading multi-body file

Datum reading changed in ReadDatums() method:
using DatumSystemAP242 (DatumSystem or DatumReference) array
instead of DatumSystem array (DatumReference)